# graphql-auto-resolver

./: README.md  main.py  pyproject.toml  requirements.txt
tests/: test_main.py
